sjengida/g2/setup_epd_line
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/setup_epd_line/src/epd.c:654:14: error: use of undeclared identifier 'rankoffsets_0'
rankoffset = rankoffsets_0[rankp]; 
             ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/setup_epd_line/src/obj/epd.o] Error 1
